# finchat

./: .gitignore  README.md
FinchatBackend/: main.py  pyproject.toml
FinchatBackend/app/api/: index.py
FinchatBackend/app/config/: settings.py
FinchatBackend/app/db/: schema.sql  sesion.py
FinchatBackend/app/db/models/: __init__.py  clasificacion_modelo.py  comprobante_modelo.py  detalle_comprobante_modelo.py  emisor_modelo.py  estado_trabajo_modelo.py  historial_chat_modelo.py  ocr_pagina_modelo.py  usuario_modelo.py  validacion_modelo.py
FinchatBackend/app/db/repositories/: __init__.py  base_repository.py  clasificacion_repositorio.py  comprobante_repositorio.py  detalle_comprobante_repositorio.py  emisor_repositorio.py  ocr_pagina_repositorio.py  usuario_repositorio.py  validacion_repositorio.py
FinchatBackend/app/features/agents/: agente_clasificador.py  agente_consulta.py  agente_parseador.py  agente_persistencia.py  agente_validador_comprobante.py  agente_validador_sunat.py  pipeline_context.py  pipeline_ingesta.py
FinchatBackend/app/features/auth/: __init__.py  auth_services.py
FinchatBackend/app/utils/: auth.py  extraccion_patron.py  hashing.py  limpieza.py
FinchatBackend/benchmark/: bench_agente_consulta.py  bench_llm.py  bench_llm_synthetic.py  bench_ocr_extraction.py  bench_pipeline.py  bench_validador_sunat.py  compare_models_parseador.py  evaluar_ocr.py  genera_sinteticos.py  generate_synthetic_data.py
FinchatBackend/tests/: README_TESTING.md  conftest.py  test_agente_consulta.py
FinchatBackend/tests/integration/: test_pipeline_ingesta.py
(+59 files in other folders)
