[project]
name = "finchatbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.4",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "playwright>=1.56.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "ollama>=0.6.1",
]
